fixed the silly issue with Himanshu's text being too long

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -25,8 +25,17 @@
   }
   
 .organizer {
-    display: inline-block;
-    margin-top: 1em;
+    display: grid; 
+    grid-template-columns: 0.6fr 1.4fr; 
+    grid-template-rows: 1fr; 
+    gap: 0px 0px; 
+    grid-template-areas: 
+      ". ."; 
+    margin-bottom: 0.5em;
+}
+.organizer-img{
+    margin-right: 1em;
+    width: 80%;
 }
 
 .panelist {
